# jtrade

./: Cargo.toml  README.md  todo.txt
src/: daily_open_close.rs  jtrader.rs  main.rs  main_gui.rs
