[package]
name = "trading-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
dotenv = "0.15.0"
eframe = "0.30.0"
egui = "0.30.0"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version ="1.42.0", features = ["full"] }
